# experimental-hub-openface

./: .gitignore  CMakeLists.txt  OpenFace.sln  README.md  download_models.sh  install_zmq_dependencies.sh
cmake/modules/: FindRabbitMQC.cmake  Findcppzmq.cmake
exe/AUExtractor/: AUExtractor.cpp  AUExtractor.vcxproj  CMakeLists.txt  custom_time.h  utils.cpp  utils.h
exe/MQAUExtractor/: CMakeLists.txt  MQAUExtractor.cpp
